# latent-browser

./: .env.sample  .gitignore  .nvmrc  .pnp.cjs  .yarnrc.yml  CONTRIBUTORS.md  LICENCE.txt  LICENSE.txt  README.md  SECURITY.md  USECASES.md  WISHLIST.md  bun.lockb  next.config.cjs  next.config.js  package.json  safelist.txt  tailwind.config.js  tsconfig.json
.github/workflows/: buildArtifact.yml
.storybook/: main.js  preview.js
docs/: quickstart.md
proxy/: index.js
public/: pug.js  site.webmanifest
src/: fonts.css  style.css  tailwind-classes.txt
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: layout.tsx  not-found.tsx  page.tsx
src/components/: index.ts
src/config/: index.ts
src/hooks/: _useLatentComponent.ts  index.ts  useDebounce.ts  useDynamicProps.ts  useEval.ts  useImage.ts  useIndexedDB.ts  useInterval.ts  useLatentComponent.ts  useLatentLink.ts  useLocalStorage.ts  useMouseDown.ts  useMousePosition.ts  useOpenTabs.ts  useParam.ts  usePreventPageRefresh.ts  useServerSideImage.ts  useSettings.ts  useSetupIndexedDB.ts  useStoredApp.ts  useStoredApps.ts
src/pages/: 404.tsx  _app.tsx  content.deprecated.tsx  content.tsx  favorites.tsx  index.tsx  render.tsx  search.tsx  settings.tsx  test.tsx
src/plugins/: README.md  build.ts  common.tsx  index.ts  types.ts
src/prompts/: builder.ts  crud.ts  improver.ts  index.ts  planner.ts  presets.ts  search.ts  turbo.ts
src/styles/: fonts.css  tabs.css
src/types/: index.ts
src/utils/: config.ts  (+18 more)
(+227 files in other folders)
